# FASS

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
docs/: API_REFERENCE.md  BACKEND_FILE_INDEX.md  DEPLOYMENT_BAREMETAL.md  INDEX.md  REPO_EXCLUDES.md  STRUCTURE_TREE.md  TECHNICAL_WHITEPAPER.md
fass_gateway/: config.env.example  requirements.txt
fass_gateway/app/: db.py  main.py  migrations.py  settings.py
fass_gateway/app/mcp_tools/: system_tools.py  web_tools.py
fass_gateway/app/models/: control.py
fass_gateway/app/newapi_test/: main.py
fass_gateway/app/routers/: automations_api.py  chat_api.py  config_api.py  control_api.py  legacy_ollama_api.py  mcp_api.py  memory_api.py  models_api.py  openai_compat.py  plugins_api.py  settings_api.py  tasks_api.py  timeline_api.py  trace_api.py
fass_gateway/app/scripts/: rebuild_memory.py
fass_gateway/app/services/: audit_log.py  context_packs.py  control_store.py  dreaming.py  embedding.py  file_store.py  ingest.py  llm_proxy.py  (+19 more)
fass_gateway/migrations/: 0001_self_heal.sql
fass_gateway/tests/: test_memoscore_index_tasks.py
legacy_plugins/ThoughtClusterManager/: ThoughtClusterManager.js  plugin-manifest.json
memoscore/: Cargo.toml  pyproject.toml
memoscore/.cargo/: config.toml
memoscore/scripts/: wsl_setup_aliyun.sh
memoscore/src/: lib.rs
plugins/hello_tool/: main.py  plugin.json
plugins/memory_writer/: main.py  plugin.json
scripts/: vendor_embeddinggemma.ps1
webui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: main.tsx
(+15 files in other folders)
