[package]
name = "memoscore"
version = "0.1.0"
edition = "2021"

[lib]
name = "memoscore"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.22"
usearch = "2.11"
